Add content for v9

--- a/Documentation.tmpl/Settings.cfg
+++ b/Documentation.tmpl/Settings.cfg
@@ -19,7 +19,7 @@
 # ...   (required) title (displayed in left sidebar (desktop) or top panel (mobile)
 # .................................................................................
 
-project     = Website monitor client
+project     = Site monitor client
 
 # .................................................................................
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
