--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "typo3/cms-core": "^10.4",
+        "typo3/cms-core": "^10.4 || ^11.5",
         "mcstreetguy/composer-parser": "^1.1"
     },
     "require-dev": {
